<resources>
    <string name="app_name">Product Management</string>
    //Ad
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-8101540683171429/3824510771</string>
    <string name="interstitial_ad_unit_id_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-8101540683171429/1744378007</string>

    //drawer
    <string name="appManagement">Quản lý ứng dụng</string>
    <string name="productManagement">Quản lý sản phẩm</string>
    //
    <string name="id">Mã sản phẩm</string>
    <string name="discount_1">Chiết khẩu 25%: </string>
    <string name="discount_2">Chiết khẩu 35%: </string>
    <string name="discount_3">Chiết khẩu 42%: </string>
    <string name="discount_4">Chiết khẩu 50%: </string>
    //btn
    <string name="btn_discount_1">25%</string>
    <string name="btn_discount_2">35%</string>
    <string name="btn_discount_3">42%</string>
    <string name="btn_discount_4">50%</string>
    <string name="btnTextDetail">Xem chi tiết</string>
    <string name="btnAdd">Thêm</string>
    <string name="btnEdit">Sửa</string>
    <string name="btnCancel">Hủy</string>
    //title
    <string name="price_title">Giá</string>
    <string name="edit_product">Sửa sản phẩm</string>
    <string name="add_product">Thêm sản phẩm</string>
    <string name="order_title">STT</string>
    <string name="amount_title">Số lượng:</string>
    <string name="name_title">Tên sản phẩm</string>
    <string name="total_title">CHI TIẾT</string>
    <string name="point_title">Điểm:</string>
    //default
    <string name="default_number">0</string>
    <string name="IsEmptyInfo">Không để trống thông tin sản phẩm</string>
    <string name="fee_ship">88,000</string>
    //
    <string name="total_price">Tổng giá trị đơn hàng:</string>
    <string name="fee_ship_string">Phí vận chuyển:</string>
    <string name="discount">Chiết khấu:</string>
    <string name="final_price">Thành tiền:</string>
    <string name="detail_orders">Chi tiết đơn hàng:</string>
    <string name="detail_activity">CHI TIẾT SẢN PHẨM</string>

</resources>
