<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/view_padding"
    >
    <TextView
        android:id="@+id/txt_prd_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/primaryTextSize"
        android:hint="@string/order_title"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        />
    <TextView
        android:id="@+id/txt_prd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_title"
        android:textSize="@dimen/primaryTextSize"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        />
    <TextView
        android:id="@+id/txt_prd_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/point_title"
        android:textSize="@dimen/primaryTextSize"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        />
    <TextView
        android:layout_weight="1"
        android:id="@+id/txt_prd_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price_title"
        android:textSize="@dimen/primaryTextSize"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        />
    <TextView
        android:id="@+id/txt_prd_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_title"
        android:textSize="@dimen/primaryTextSize"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        />

</LinearLayout>