<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDarkColor">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/btnSizeType1"
            android:layout_height="@dimen/btnSizeType1"
            android:src="@drawable/btn_header_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="@dimen/view_padding"
            android:text="@string/detail_activity"
            android:textColor="@color/white"
            android:textSize="@dimen/primaryTextSize3"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSize5"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/name_title"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_title"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/id"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_product_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/view_padding">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/point_title"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_product_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/price_title"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/discount_1"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_detail_discount_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/discount_2"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_detail_discount_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/discount_3"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_detail_discount_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSize5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginEndSpace"
                    android:text="@string/discount_4"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_detail_discount_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/primaryTextSize2" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>