<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Demo.activity.MainScreenActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btn_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_padding"
                    android:src="@drawable/icon_menu"
                    />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_Total"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/primaryLightColor"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/view_padding"
                        >

                        <TextView
                            android:id="@+id/title_Id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/marginEndSpace"
                            android:layout_marginStart="@dimen/marginEndSpace"
                            android:gravity="center"
                            android:text="@string/order_title"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/primaryTextSize2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/name_title"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/primaryTextSize2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/marginSpace2"
                            android:text="@string/amount_title"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/primaryTextSize2"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rcv_prd"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:padding="@dimen/view_padding"
                        />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <Button
                android:id="@+id/btn_Total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/banner_ads"
                android:background="@color/secondaryColor"
                android:text="@string/btnTextDetail"
                android:textSize="@dimen/secondaryTextSize"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="bold" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/banner_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/marginTopBanner"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id_test" />

        </RelativeLayout>
    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        ads:headerLayout="@layout/nav_header"
        ads:menu="@menu/drawer_view"

        />

</android.support.v4.widget.DrawerLayout>